--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 
 dependencies:
   syncfusion_flutter_gauges: ^18.1.56
+  flutter_svg:
   dio: ^3.0.9
   flutter_mobx: ^1.1.0
   mobx: ^1.2.1
