--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,10 @@ environment:
   sdk: ">=2.2.0 <3.0.0"
 
 dependencies:
+  http: ^0.12.1
+  shared_preferences: ^0.5.6+1
+  hive: ^1.3.0
+  path_provider: ^1.6.0
   syncfusion_flutter_gauges: ^18.1.56
   dio: ^3.0.9
   flutter_mobx: ^1.1.0
